examples/test/testpolicy10804.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10804
  namespace: namespace457
spec:
  podSelector:
    matchLabels:
      key46: value22
      key14: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value15
      podSelector:
        matchLabels:
          key23: value22
          key6: value36
